deploy/central-cluster-thanos/thanos-remotewrite/querier-ingress-thanos.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: querier-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: querier-thanos.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: querier
            port:
              number: 9090
